# supermanager

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  INSTRUCTIONS.md  LICENSE  NOTICE  README.md  fly.toml  install.sh  run-observer.sh
.codex/: hooks.json
.github/workflows/: check-cli-version.yml  deploy-server.yml  deploy-web.yml  fly-deploy.yml  release-cli.yml  test-backend.yml
crates/coordination-server/: Cargo.toml
crates/coordination-server/migrations/: 0001_init.sql  0002_room_auth.sql
crates/coordination-server/src/: api.rs  main.rs  state.rs  store.rs  supermanager_instructions.md  util.rs
crates/coordination-server/src/agent/: mod.rs  summarize.rs  tools.rs
crates/coordination-server/src/api/: agent.rs  auth.rs  mod.rs  sse.rs  summarize.rs
crates/coordination-server/src/auth/: config.rs  jwt.rs  mod.rs  workos.rs
crates/coordination-server/src/routes/: invites.rs  mod.rs  rooms.rs  sse.rs
crates/coordination-server/src/store/: events.rs  invites.rs  mod.rs  rooms.rs  summaries.rs  test_support.rs
crates/reporter-cli/: Cargo.toml
crates/reporter-cli/src/: main.rs
crates/reporter-protocol/: Cargo.toml
crates/reporter-protocol/src/: hook.rs  http.rs  lib.rs  project.rs  room.rs  summary.rs  updates.rs
crates/summary-agent/: Cargo.toml
crates/summary-agent/src/: agent.rs  coordinator.rs  db.rs  event.rs  ipc.rs  main.rs  prompt.rs  tools.rs  workflow.rs
crates/supermanager-cli/: Cargo.toml
crates/supermanager-cli/src/: auth.rs  context.rs  lib.rs  local.rs  main.rs  mcp.rs  orgs.rs  projects.rs  rooms.rs  support.rs  types.rs  update.rs
crates/workflow-agent/: Cargo.toml
crates/workflow-agent/src/: agent.rs  coordinator.rs  db.rs  event.rs  main.rs  prompt.rs  tools.rs  workflow.rs
crates/workos-client/: Cargo.toml
crates/workos-client/src/: lib.rs
docs/: hooks-research.md
infra/aws/: README.md  main.tf  outputs.tf  variables.tf
openapi/: workos-subset.yaml
plugins/claude-reporter/: CLAUDE.md
plugins/claude-reporter/.claude-plugin/: plugin.json
plugins/claude-reporter/hooks/: hooks.json
plugins/claude-reporter/scripts/: run-reporter.sh
plugins/claude-reporter/skills/reporting/: SKILL.md
plugins/codex-reporter/: .mcp.json  hooks.json
plugins/codex-reporter/.codex-plugin/: plugin.json
plugins/codex-reporter/scripts/: run-reporter.sh
plugins/supermanager-channel/: .mcp.json  README.md  package-lock.json  package.json  server.mjs
plugins/supermanager-channel/.claude-plugin/: plugin.json
scripts/: check-cli-release.py  package-release.sh
server/: package.json  tsconfig.json
server/migrations/: 0001_init.sql  0002_auth.sql  0002_event_search.sql  0003_organization_summaries.sql  0003_summary_tables.sql  0004_room_summaries.sql
server/src/: app.ts  auth-schema.ts  auth.ts  config.ts  db.ts  main.ts  middleware.test.ts  middleware.ts  migrations.test.ts  migrations.ts  sse.ts  storage.ts  types.ts
server/src/http/: errors.ts  requests.ts  responses.ts
server/src/mcp/: tools.ts
server/src/search/: embeddings.ts  store.ts
server/src/summary/: agent-host.ts  protocol.ts  tool-executor.ts
web/: index.html  package.json  pnpm-lock.yaml
web/public/: install.sh
web/src/: api.ts  app.tsx  auth-client.ts  auth.tsx  room-credentials.ts  styles.css  ui.ts  utils.ts
web/src/components/: copy-panel.tsx  dropdown-button.tsx
web/src/components/app-page/: cli-panel.tsx  cli-setup-banner.tsx  create-room-dialog.tsx  device-approval-dialog.tsx  invite-join-gate.tsx  invite-teammate-dialog.tsx  invite-teammates-banner.tsx  org-wide-bluf-card.tsx  organization-insights-panel.tsx  organization-onboarding.tsx  workspace-header.tsx  workspace-panel.tsx
web/src/lib/: format-relative-time.ts
web/src/queries/: device-status.ts  room.ts  workspace.ts
web/src/routes/: app-page.tsx  device-page.tsx  docs-page.tsx  install-page.tsx  invite-page.tsx  landing-page.tsx  login-page.tsx  room-page.tsx
