[workspace]
members = [
  "crates/coordination-server",
  "crates/reporter-protocol",
  "crates/supermanager-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive", "env"] }
flate2 = "1.1.5"
futures-core = "0.3.31"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
toml_edit = "0.23"
