[package]
name = "coordination-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
futures-core.workspace = true
rand = "0.9"
rusqlite = { version = "0.34", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tokio.workspace = true
reporter-protocol = { path = "../reporter-protocol" }
