[package]
name = "coordination-server"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
futures-core.workspace = true
rand = "0.9"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
time.workspace = true
tokio.workspace = true
jsonwebtoken.workspace = true
reporter-protocol = { path = "../reporter-protocol" }
workos-client = { path = "../workos-client" }
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx.workspace = true
url = "2.5"
codex-app-server-client.workspace = true
codex-app-server-protocol.workspace = true
codex-core.workspace = true
codex-protocol.workspace = true
codex-arg0.workspace = true
codex-feedback.workspace = true

[dev-dependencies]
tempfile.workspace = true
