[package]
name = "summary-agent"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util"] }
reporter-protocol = { path = "../reporter-protocol" }
codex-app-server-client.workspace = true
codex-app-server-protocol.workspace = true
codex-core.workspace = true
codex-protocol.workspace = true
codex-arg0.workspace = true
codex-feedback.workspace = true

[dev-dependencies]
uuid.workspace = true
