[package]
name = "supermanager"
version = "0.0.11"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
flate2.workspace = true
reporter-protocol = { path = "../reporter-protocol" }
reqwest = { workspace = true, features = ["blocking"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
toml_edit.workspace = true
